# mcp-outlet

./: .cursorrules  .env.example  .gitignore  .whitesource  LICENSE  README.md  action.yml  config.ts  jest.config.js  package-lock.json  package.json  setup-mcp.sh  tsconfig.json
.claude/: settings.json
.claude/hooks/: graphify-provision.sh
.github/workflows/: ai-coder-jira.yml  ai-coder-n8n-caller.yml  deploy.yml  graphify-update.yml
deployments/: multi-cloud.ts  offline.ts  shared.ts
deployments/aws/: handlerWrappers.ts  helpers.ts  serverless.ts
deployments/azure/: handlerWrappers.py  handlerWrappers.ts  helpers.ts  serverless.ts
deployments/package/: compress.ts  esbuild.ts  python-shiv.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md
src/js/handlers/: helpers.ts  rpc.ts
src/js/helpers/: McpCaller.ts  error.ts  schema.ts  tracer.ts
src/js/tests/: runner.test.ts  setup.ts
src/python/: pyproject.toml  pytest.ini
src/python/app/handlers/: __init__.py  helpers.py  rpc.py
src/python/app/helpers/: __init__.py  error.py  mcp_caller.py  schema.py  tracer.py  uv_handler.py
src/python/tests/: __init__.py  setup.py  test_dynamic.py
test/: config.ts  helpers.ts  scripts.ts  types.ts
