[project]
name = "mcp-outlet"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pydantic-core",
    "typing-extensions",
    "pandas",
    "requests",
    "numpy",
    "matplotlib",
    "mcp",
    "pip>=25.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]  # Package the python directory

[tool.hatch.build.targets.sdist]
include = [
    "/app",          # Include the entire python directory
    "/pyproject.toml"
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]
